Finally got table reader to work.

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
-  <title>Flight Log Data N562D</title>
+  <title>Flight Log Data N562D - Index</title>
 </head>
 <body ng-app="main">
 <div ng-controller="DemoCtrl">
